Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41515

Fusion style with own palette causes wrong colored fusion_arrow.png

    XMLWordPrintable

Details

    • 5bee3ac1da725489f760810d69289a96ebf9ea75

    Description

      Using Fusion style with own palette causes wrong colored fusion_arrow.png if QPalette::Button has defined to Qt::lightGray or Qt::white and QPalette::ButtonText is set to a blueish color. Using QPalette::Button with e.g. Qt::darkGray works properly.

      Attachments

        1. qtbug41515_2.zip
          1 kB
        2. qtbug41515.jpg
          qtbug41515.jpg
          8 kB
        3. qtbug41515.zip
          0.6 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            allan.jensen Allan Sandfeld Jensen
            kehayryn Keijo Hayrynen
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes